--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,317 @@
 <footer class="footer">
-<p class="footer__text">©  2020 | All Rights Reserved | Developed with 
-    <span class="heart"></span>by <span class="footer__text__decoration">GoIT Students</span></p>
+<p class="footer__text">©  2020 | All Rights Reserved | </p>
+<p class="footer__text"> Developed with
+  <span class="heart"></span>
+  by <span class="footer__text__decoration" id="team">GoIT Students</span>
+</p>
   </footer>
+
+<!-- ==========================модальне вікно====== -->
+
+  <div class="developers">
+    <div class="developers__content">
+        <h2 class="developers__title">Команда розробників</h2>
+        <button
+      type="button"
+      class="developers__button"
+      data-action="close-developers"
+    ></button>
+          <ul class="developers__list">
+          <li class="developers__item">
+          <img src="./images/icons/ilona.jpg" alt="Ілона Миронюк" width="130" height="150" />
+          <div class="expert">
+          <h3 class="developers-text">Ілона Миронюк</h3>
+          <ul class="list socials-icon">
+            <li class="socials-icon-item">
+              <a href="" class="social-icon-link">
+                <svg class="socials-icon-svg">
+                  <use href="./images/icons/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-icon-item">
+              <a href="" class="social-icon-link">
+                <svg class="socials-icon-svg">
+                  <use href="./images/icons/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-icon-item">
+              <a href="" class="social-icon-link">
+                <svg class="socials-icon-svg">
+                  <use href="./images/icons/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-icon-item">
+              <a href="" class="social-icon-link">
+                <svg class="socials-icon-svg">
+                  <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+        </li>
+        <li class="developers__item">
+          <img src="./images/icons/ilona.jpg" alt="Артем Білодід" width="130" height="150" />
+          <div class="expert">
+          <h3 class="developers-text">Артем Білодід</h3>
+          <ul class="list socials-icon">
+            <li class="socials-icon-item">
+              <a href="" class="social-icon-link">
+                <svg class="socials-icon-svg">
+                  <use href="./images/icons/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-icon-item">
+              <a href="" class="social-icon-link">
+                <svg class="socials-icon-svg">
+                  <use href="./images/icons/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-icon-item">
+              <a href="" class="social-icon-link">
+                <svg class="socials-icon-svg">
+                  <use href="./images/icons/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-icon-item">
+              <a href="" class="social-icon-link">
+                <svg class="socials-icon-svg">
+                  <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+        </li>
+        <li class="developers__item">
+          <img src="./images/icons/oleksandr.jpg" alt="Олександр Корнієць" width="130" height="150" />
+          <div class="expert">
+          <h3 class="developers-text">Олександр Корнієць</h3>
+          <ul class="list socials-icon">
+            <li class="socials-icon-item">
+              <a href="" class="social-icon-link">
+                <svg class="socials-icon-svg">
+                  <use href="./images/icons/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-icon-item">
+              <a href="" class="social-icon-link">
+                <svg class="socials-icon-svg">
+                  <use href="./images/icons/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-icon-item">
+              <a href="" class="social-icon-link">
+                <svg class="socials-icon-svg">
+                  <use href="./images/icons/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-icon-item">
+              <a href="" class="social-icon-link">
+                <svg class="socials-icon-svg">
+                  <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+        </li>
+        <li class="developers__item">
+          <img src="./images/icons/ilona.jpg" alt="Роман Ллієнко" width="130" height="150" />
+          <div class="expert">
+          <h3 class="developers-text">Роман Ллієнко</h3>
+          <ul class="list socials-icon">
+            <li class="socials-icon-item">
+              <a href="" class="social-icon-link">
+                <svg class="socials-icon-svg">
+                  <use href="./images/icons/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-icon-item">
+              <a href="" class="social-icon-link">
+                <svg class="socials-icon-svg">
+                  <use href="./images/icons/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-icon-item">
+              <a href="" class="social-icon-link">
+                <svg class="socials-icon-svg">
+                  <use href="./images/icons/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-icon-item">
+              <a href="" class="social-icon-link">
+                <svg class="socials-icon-svg">
+                  <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+        </li>
+        <li class="developers__item">
+          <img src="./images/icons/tatyana.jpg" alt="Тетяна Тулук" width="130" height="150" />
+          <div class="expert">
+          <h3 class="developers-text">Тетяна Тулук</h3>
+          <ul class="list socials-icon">
+            <li class="socials-icon-item">
+              <a href="" class="social-icon-link">
+                <svg class="socials-icon-svg">
+                  <use href="./images/icons/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-icon-item">
+              <a href="" class="social-icon-link">
+                <svg class="socials-icon-svg">
+                  <use href="./images/icons/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-icon-item">
+              <a href="" class="social-icon-link">
+                <svg class="socials-icon-svg">
+                  <use href="./images/icons/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-icon-item">
+              <a href="" class="social-icon-link">
+                <svg class="socials-icon-svg">
+                  <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+        </li>
+        <li class="developers__item">
+          <img src="./images/icons/ilona.jpg" alt="Владислав Апелганс" width="130" height="150" />
+          <div class="expert">
+          <h3 class="developers-text">Владислав Апелганс</h3>
+          <ul class="list socials-icon">
+            <li class="socials-icon-item">
+              <a href="" class="social-icon-link">
+                <svg class="socials-icon-svg">
+                  <use href="./images/icons/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-icon-item">
+              <a href="" class="social-icon-link">
+                <svg class="socials-icon-svg">
+                  <use href="./images/icons/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-icon-item">
+              <a href="" class="social-icon-link">
+                <svg class="socials-icon-svg">
+                  <use href="./images/icons/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-icon-item">
+              <a href="" class="social-icon-link">
+                <svg class="socials-icon-svg">
+                  <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+        </li>
+        <li class="developers__item">
+          <img src="./images/icons/mihail.jpg" alt="Михайло Осіпчук" width="130" height="150" />
+          <div class="expert">
+          <h3 class="developers-text">Михайло Осіпчук</h3>
+          <ul class="list socials-icon">
+            <li class="socials-icon-item">
+              <a href="" class="social-icon-link">
+                <svg class="socials-icon-svg">
+                  <use href="./images/icons/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-icon-item">
+              <a href="" class="social-icon-link">
+                <svg class="socials-icon-svg">
+                  <use href="./images/icons/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-icon-item">
+              <a href="" class="social-icon-link">
+                <svg class="socials-icon-svg">
+                  <use href="./images/icons/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-icon-item">
+              <a href="" class="social-icon-link">
+                <svg class="socials-icon-svg">
+                  <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+        </li>
+        <li class="developers__item">
+          <img src="./images/icons/ilona.jpg" alt="Олеся Жук" width="130" height="150" />
+          <div class="expert">
+          <h3 class="developers-text">Олеся Жук</h3>
+          <ul class="list socials-icon">
+            <li class="socials-icon-item">
+              <a href="" class="social-icon-link">
+                <svg class="socials-icon-svg">
+                  <use href="./images/icons/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-icon-item">
+              <a href="" class="social-icon-link">
+                <svg class="socials-icon-svg">
+                  <use href="./images/icons/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-icon-item">
+              <a href="" class="social-icon-link">
+                <svg class="socials-icon-svg">
+                  <use href="./images/icons/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-icon-item">
+              <a href="" class="social-icon-link">
+                <svg class="socials-icon-svg">
+                  <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+        </li>
+      
+      
+      </ul>
+      </div>
+
+    </div>
+
+    
+  </div>
+
