--- a/css/styles.css
+++ b/css/styles.css
@@ -346,25 +346,34 @@ header>p {
 }
 
 .products-item:nth-child(1)::before {
+  background-size: contain;
+  background-repeat: no-repeat;
   position: absolute;
   top: -261px;
-  content: url('/images/prod-1.png');
+  content: "";
+  background-image: url('/images/prod-1.png');
   width: 100%;
   height: 394px;
 }
 
 .products-item:nth-child(2)::before {
+  background-size: contain;
+  background-repeat: no-repeat;
   position: absolute;
   top: -261px;
-  content: url('/images/prod-2.png');
+  content: "";
+  background-image: url('/images/prod-2.png');
   width: 100%;
   height: 394px;
 }
 
 .products-item:nth-child(3)::before {
+  background-size: contain;
+  background-repeat: no-repeat;
   position: absolute;
   top: -261px;
-  content: url('/images/prod-3.png');
+  content: "";
+  background-image: url('/images/prod-3.png');
   width: 100%;
   height: 394px;
 }
@@ -1181,29 +1190,20 @@ header>p {
     padding-top: 160px;
   }
 
-  /*.products-item:nth-child(1)::before {
-    position: absolute;
-    top: -261px;
-    content: url('/images/prod-1.png');
-    width: 100%;
-    height: 394px;
+  .products-item:nth-child(1)::before {
+    top: -140px;
+    height: 280px;
   }
 
   .products-item:nth-child(2)::before {
-    position: absolute;
-    top: -261px;
-    content: url('/images/prod-2.png');
-    width: 100%;
-    height: 394px;
+    top: -140px;
+    height: 280px;
   }
 
   .products-item:nth-child(3)::before {
-    position: absolute;
-    top: -261px;
-    content: url('/images/prod-3.png');
-    width: 100%;
-    height: 394px;
-  }*/
+    top: -140px;
+    height: 280px;
+  }
 
   .products-item>h3 {
     font-size: 20px;
@@ -1994,10 +1994,11 @@ header>p {
     padding-top: 160px;
   }
 
-  /*.products-item:nth-child(1)::before {
+  /*  .products-item:nth-child(1)::before {
       position: absolute;
       top: -261px;
-      content: url('/images/prod-1.png');
+      content: "";
+      background-image: url('/images/prod-1.png');
       width: 100%;
       height: 394px;
     }
@@ -2005,7 +2006,8 @@ header>p {
     .products-item:nth-child(2)::before {
       position: absolute;
       top: -261px;
-      content: url('/images/prod-2.png');
+      content: "";
+      background-image: url('/images/prod-2.png');
       width: 100%;
       height: 394px;
     }
@@ -2013,7 +2015,8 @@ header>p {
     .products-item:nth-child(3)::before {
       position: absolute;
       top: -261px;
-      content: url('/images/prod-3.png');
+      content: "";
+      background-image: url('/images/prod-3.png');
       width: 100%;
       height: 394px;
     }*/
@@ -2777,21 +2780,32 @@ header>p {
     padding-top: 118px;
   }
 
-  /*.products-item:nth-child(1)::before {
-    top: -138px;
-    width: 100%;
-    height: auto;
-  }
-
-  .products-item:nth-child(2)::before {
-    top: -138px;
-    width: 100%;
-    height: auto;
-  }
-
-  .products-item:nth-child(3)::before {
-    top: -138px;
-  }*/
+  /*  .products-item:nth-child(1)::before {
+      position: absolute;
+      top: -261px;
+      content: "";
+      background-image: url('/images/prod-1.png');
+      width: 100%;
+      height: 394px;
+    }
+  
+    .products-item:nth-child(2)::before {
+      position: absolute;
+      top: -261px;
+      content: "";
+      background-image: url('/images/prod-2.png');
+      width: 100%;
+      height: 394px;
+    }
+  
+    .products-item:nth-child(3)::before {
+      position: absolute;
+      top: -261px;
+      content: "";
+      background-image: url('/images/prod-3.png');
+      width: 100%;
+      height: 394px;
+    }*/
 
   .products-item>h3 {
 
@@ -3620,7 +3634,8 @@ header>p {
   .products-item:nth-child(1)::before {
     position: absolute;
     top: -261px;
-    content: url('/images/prod-1.png');
+    content: "";
+    background-image: url('/images/prod-1.png');
     width: 100%;
     height: 394px;
   }
@@ -3628,7 +3643,8 @@ header>p {
   .products-item:nth-child(2)::before {
     position: absolute;
     top: -261px;
-    content: url('/images/prod-2.png');
+    content: "";
+    background-image: url('/images/prod-2.png');
     width: 100%;
     height: 394px;
   }
@@ -3636,7 +3652,8 @@ header>p {
   .products-item:nth-child(3)::before {
     position: absolute;
     top: -261px;
-    content: url('/images/prod-3.png');
+    content: "";
+    background-image: url('/images/prod-3.png');
     width: 100%;
     height: 394px;
   }
