--- a/css/styles.css
+++ b/css/styles.css
@@ -122,6 +122,7 @@ nav ul li {
 
 .hero {
   background-image: url('/images/eat-icecream.png'), url('/images/icecream-header.png'), url('/images/Ellipse-pink3.png');
+  background-size: 304px 241px, 236px 557px, 534px;
   background-repeat: no-repeat;
   background-position: bottom right, top 108px right 328px, top 54px right 149px;
   position: relative;
@@ -997,8 +998,9 @@ header>p {
   }
 
   .hero {
-    background-image: url('/images/eat-icecream.png'), url('/images/icecream-header.png'), url('/images/Ellipse-pink3.png');
-    background-position: bottom right, top 108px right 328px, top 54px right 149px;
+    background-image: url('/images/icecream-header.png'), url('/images/Ellipse-pink3.png');
+    background-size: 171px 410px, 346px 344px;
+    background-position: top 92px left 117px, top 83px left 36px;
     position: relative;
     padding-top: 37px;
     padding-bottom: 60px;
@@ -1820,12 +1822,13 @@ header>p {
 
   .hero {
     background-image: url('/images/eat-icecream.png'), url('/images/icecream-header.png'), url('/images/Ellipse-pink3.png');
+    background-size: 190px 150px, 143px 336px, 335px 333px;
     background-repeat: no-repeat;
-    background-position: bottom right, top 108px right 328px, top 54px right 149px;
+    background-position: bottom left 546px, top 80px left 322px, top 43px left 248px;
     position: relative;
     padding-top: 37px;
     padding-bottom: 60px;
-    width: 1168px;
+    width: 768px;
     margin: 0 auto;
   }
 
@@ -2620,6 +2623,7 @@ header>p {
 
   .hero {
     background-image: url('/images/eat-icecream.png'), url('/images/icecream-header.png'), url('/images/Ellipse-pink3.png');
+    background-size: 304px 241px, 236px 557px, 534px;
     background-repeat: no-repeat;
     background-position: bottom right, top 108px right 328px, top 54px right 149px;
     position: relative;
