--- a/src/partials/howitsmade.html
+++ b/src/partials/howitsmade.html
@@ -13,6 +13,35 @@
 
 <body>
 
+    <div class="modal is-hidden" data-modal> 
+        <div class="modal__div"> 
+            <button class="modal__close-button-position" data-modal-close> 
+                <svg class="modal__close-button"> 
+                    <use href="/src/images/icons-svg.svg#icon-X"></use>
+                </svg>
+            </button>
+            <div class="modal__elements"> 
+                <h3 class="modal__title">More information about how is made </h3> 
+                <form name="modal__contact-form" class="modal__contact-form"> 
+                    <!-- <label class="modal__form-item"> 
+                        <p class="modal__text">Name</p> 
+                        <input class="modal__input-dimensions" name="name" type="text" required> 
+                        
+                    </label> -->
+                    <label class="modal__form-item">
+                        <p class="modal__text">Comments</p>
+                        <textarea class="modal__textarea" name="Comments" placeholder="Enter the text" cols="10"
+                            rows="10"></textarea> 
+                    </label>
+                    
+                    <button type="submit" class="modal__button-submit">Send</button> 
+                </form>
+            </div>
+        </div>
+    </div>
+
+
+
     <main>
 
         <!--HOW-ITS-MADE-section-->
@@ -47,15 +76,16 @@
                             <div class="quantity__svg-container">
                                 <svg class="quantity__svg">
                                     <use href="/src/images/icons-svg.svg#icon-Group-1"></use>
+                                    
                                 </svg>
-                                <h3 class="quantity__title">721</h3>
+                                <p class="quantity__title">721</p>
                                 <p class="quantity__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
                             </div>
                         </li>
                         <li class="quantity__item">
                             <div class="quantity__svg-container">
-                                <svg class="quantity__svg">
-                                    <use href="/src/images/icons-svg.svg#icon-Group-1"></use>
+                                <svg class="quantity__svg" width="33px" height="50px">
+                                    <use href="/src/images/icons-svg.svg#icon-Group-2"></use>
                                 </svg>
                                 <h3 class="quantity__title">16kg</h3>
                                 <p class="quantity__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
@@ -64,7 +94,7 @@
                         <li class="quantity__item">
                             <div class="quantity__svg-container">
                                 <svg class="quantity__svg">
-                                    <use href="/src/images/icons-svg.svg#icon-Group-1"></use>
+                                    <use href="/src/images/icons-svg.svg#icon-Group-3"></use>
                                 </svg>
                                 <h3 class="quantity__title">84</h3>
                                 <p class="quantity__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
@@ -76,6 +106,7 @@
 
         </section>
     </main>
+    <script src="/js/modal.js"></script>
 </body>
 
 </html>
