--- a/src/sass/_howitsmade.scss
+++ b/src/sass/_howitsmade.scss
@@ -1,3 +1,194 @@
+.is-hidden {
+	visibility: hidden;
+	opacity: 0;
+	transform: scale(0,1);
+	pointer-events: none;
+	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal {
+	background: rgba(0, 0, 0, 0.2);
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	z-index: 99;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    // &__span-terms {
+	// 	color: #2196F3;
+	// }
+
+	&__button-submit{
+		font-size: 16px;
+		line-height: 26px;
+		text-align: center;
+		letter-spacing: 0.03em;
+		background: #F5F4FA;
+		border: 0;
+		border-radius: 4px;
+		padding: 6px 22px;
+		transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+		color: #fff;
+		background: #2196F3;
+		padding: 10px 80px;
+		margin: 0 auto;
+		display: block;
+	}
+
+	&__div{
+		width: 528px;
+		height: 581px;
+		background: #FFFFFF;
+		box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+		border-radius: 4px;
+		position: relative;
+		transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+		padding: 40px;
+	}
+
+	&__close-button-position{
+		width: 30px;
+		height: 30px;
+		background: #FFFFFF;
+		border: 1px solid rgba(0, 0, 0, 0.1);
+		border-radius: 50%;
+		top: 8px;
+		right: 8px;
+		position: absolute;
+		transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	}
+
+	&__close-button {
+		top: 17px;
+		right: 17px;
+		width: 11px;
+		height: 11px;
+	}
+
+	&__elements {
+		width: 448px;
+		margin: 0px auto;
+		position: relative;
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+	}
+
+	&__title {
+		position: relative;
+		height: 23px;
+		font-style: normal;
+		font-weight: 700;
+		font-size: 20px;
+		line-height: 23px;
+		text-align: center;
+		letter-spacing: 0.03em;
+		padding-bottom: 12px;
+	}
+
+	&__terms-svg {
+		width: 16px;
+		height: 16px;
+		opacity: 0;
+		fill: #FFFFFF;
+	}
+
+	&__form-item {
+		display: flex;
+		flex-direction: column;
+		gap: 4px;
+		position: relative;
+		&:focus-within {
+			svg {
+				use {
+					fill: #2196F3;
+					transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+				}
+			}
+		}
+	}
+
+	&__text {
+		font-style: normal;
+		font-weight: 400;
+		font-size: 12px;
+		line-height: 14px;
+		letter-spacing: 0.01em;
+		// color: $color_3;
+		padding-bottom: 4px;
+	}
+
+	&__text-terms {
+		font-style: normal;
+		font-weight: 400;
+		font-size: 12px;
+		line-height: 14px;
+		letter-spacing: 0.01em;
+		// color: $color_3;
+		padding-bottom: 4px;
+		font-size: 14px;
+		line-height: 24px;
+		letter-spacing: 0.03em;
+	}
+	li {
+		p.modal__text-terms {
+			display: inline-block;
+			vertical-align: middle;
+		}
+	}
+
+	&__input-dimensions {
+		width: 448px;
+		height: 40px;
+		border: 1px solid rgba(33, 33, 33, 0.2);
+		border-radius: 4px;
+		margin-bottom: 10px;
+		position: relative;
+		cursor: pointer;
+		padding-left: 42px;
+		&:focus {
+			outline: none;
+			border: 1px solid #2196F3;
+			border-radius: 4px;
+			transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+		}
+	}
+
+	&__textarea {
+		width: 448px;
+		height: 40px;
+		border: 1px solid rgba(33, 33, 33, 0.2);
+		border-radius: 4px;
+		margin-bottom: 10px;
+		position: relative;
+		cursor: pointer;
+		width: 488px;
+		height: 120px;
+		font-weight: 400;
+		font-size: 14px;
+		line-height: 16px;
+		letter-spacing: 0.01em;
+		// color: $color_5;
+		&:focus {
+			outline: none;
+			border: 1px solid #2196F3;
+			border-radius: 4px;
+			transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+		}
+	}
+
+}
+
+.modal--terms {
+	padding-bottom: 20px;
+	flex-direction: row;
+	gap: 7px;
+}
+
+
 .made{
     font-style: normal;
    font-weight: 400;
@@ -100,6 +291,7 @@
 
     &__list{
         display: flex;
+        // flex-direction: start;
         list-style: none;
         margin: 0px;
         padding-bottom: 209px;
@@ -108,6 +300,7 @@
 
     &__item{
         font-style: normal;
+        text-align: left;
 
         
     }
@@ -117,13 +310,15 @@
         flex-direction: column;
         // align-items: start;
         
+        
     }
 
     &__svg{
+        // stroke: #2196F3;
         fill: $svg-background;
         width: 33px;
         height: 50px;
-        padding-bottom: 40px;
+        margin-bottom: 40px;
     }
 
     &__title{
@@ -134,6 +329,8 @@
         letter-spacing: 0.04em;
         text-transform: uppercase;
         color: $primary-color;
+        text-align: left;
+        margin: 0px;
     }
 
     &__text{
@@ -143,6 +340,7 @@
         line-height: 28px;
         letter-spacing: 0.02em;
         color: $black-color;
+        // text-align: left;
     }
 
 }
