--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -3,6 +3,170 @@ body {
   font-family: "DM Sans", sans-serif;
 }
 
+.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  transform: scale(0, 1);
+  pointer-events: none;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal {
+  background: rgba(0, 0, 0, 0.2);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 99;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal__button-submit {
+  font-size: 16px;
+  line-height: 26px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  background: #F5F4FA;
+  border: 0;
+  border-radius: 4px;
+  padding: 6px 22px;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: #fff;
+  background: #2196F3;
+  padding: 10px 80px;
+  margin: 0 auto;
+  display: block;
+}
+.modal__div {
+  width: 528px;
+  height: 581px;
+  background: #FFFFFF;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  position: relative;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 40px;
+}
+.modal__close-button-position {
+  width: 30px;
+  height: 30px;
+  background: #FFFFFF;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  top: 8px;
+  right: 8px;
+  position: absolute;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal__close-button {
+  top: 17px;
+  right: 17px;
+  width: 11px;
+  height: 11px;
+}
+.modal__elements {
+  width: 448px;
+  margin: 0px auto;
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.modal__title {
+  position: relative;
+  height: 23px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  padding-bottom: 12px;
+}
+.modal__terms-svg {
+  width: 16px;
+  height: 16px;
+  opacity: 0;
+  fill: #FFFFFF;
+}
+.modal__form-item {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  position: relative;
+}
+.modal__form-item:focus-within svg use {
+  fill: #2196F3;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal__text {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+  padding-bottom: 4px;
+}
+.modal__text-terms {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+  padding-bottom: 4px;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+}
+.modal li p.modal__text-terms {
+  display: inline-block;
+  vertical-align: middle;
+}
+.modal__input-dimensions {
+  width: 448px;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  margin-bottom: 10px;
+  position: relative;
+  cursor: pointer;
+  padding-left: 42px;
+}
+.modal__input-dimensions:focus {
+  outline: none;
+  border: 1px solid #2196F3;
+  border-radius: 4px;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal__textarea {
+  width: 448px;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  margin-bottom: 10px;
+  position: relative;
+  cursor: pointer;
+  width: 488px;
+  height: 120px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.01em;
+}
+.modal__textarea:focus {
+  outline: none;
+  border: 1px solid #2196F3;
+  border-radius: 4px;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal--terms {
+  padding-bottom: 20px;
+  flex-direction: row;
+  gap: 7px;
+}
+
 .made {
   font-style: normal;
   font-weight: 400;
@@ -92,6 +256,7 @@ body {
 }
 .quantity__item {
   font-style: normal;
+  text-align: left;
 }
 .quantity__svg-container {
   display: flex;
@@ -101,7 +266,7 @@ body {
   fill: #fea5bb;
   width: 33px;
   height: 50px;
-  padding-bottom: 40px;
+  margin-bottom: 40px;
 }
 .quantity__title {
   font-family: "Titan One";
@@ -111,6 +276,8 @@ body {
   letter-spacing: 0.04em;
   text-transform: uppercase;
   color: #d41443;
+  text-align: left;
+  margin: 0px;
 }
 .quantity__text {
   font-family: "DM Sans";
